# `pydot` changelog

2.0.0 (unreleased)
------------------

- Object instantiation times are reduced by over 95%. Module import
  time has slightly increased, but is only one-off and should be offset
  by the gains after around 5 to 15 pydot objects. Object memory sizes
  are reduced by over 85%. (#242)

API:

API (minor change or few affected):
- `create_attribute_methods()`, which adds getter and setter methods
  for DOT attributes to a class, is moved out of class `Common` and
  works in two steps now: First pass it the set of attribute names and
  it will return a second function that can be called on the class. The
  two steps can be combined in a parameterized class decorator:
  `@create_attribute_methods(my_dot_attribute_set)`. (#242)
- `Dot.formats` changes from an instance attribute to a class
  attribute. (#242)


1.4.2 (unreleased)
------------------

- Fix: Prevent TypeError in handling of DOT parser error (#176)


1.4.1 (2018-12-12)
------------------

- Make graph, edge, node attributes order deterministic
- Fix string formatting after catching error (#201)


1.4.0 (2018-12-01)
------------------

- Installation of pydot in conda env on Windows directly supported
- Fixed comparing of SHA hash in regression tests (which fail now)


1.3.0 (2018-11-19)
------------------

- Dropped Python 2.6 support (#185)
- Move errno from os to builtin. Fixes #177 (#191, #182)


1.2.4 (2017-12-25)
------------------

- ENH: propagate `LD_LIBRARY_PATH` when calling GraphViz
- API: raise `OSError` when a GraphViz executable is not found
- API: add method `__str__` to classes `Node, Edge, Graph`
- API: add arg `encoding` to `Dot` methods `create, write`
- API: quote cluster names when necessary
- API: give source and destination nodes as separate args to `Edge.__init__`
- API: never ignore `src, dst`, overwrite if `points` defined in `obj_dict`


1.2.3 (2016-10-06)
------------------

- support Python 2.6
- several corrections